--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     tags:
-      - "v*.*.*"  # 当有版本标签时也触发构建
+      - "v*.*.*"
   workflow_dispatch:
 
 jobs:
@@ -24,6 +24,15 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Extract Docker image tag
+        id: extract_tag
+        run: |
+          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+            echo "IMAGE_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+          else
+            echo "IMAGE_TAG=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+          fi
       
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -32,4 +41,4 @@ jobs:
           push: true
           tags: |
             milo1023/majsoulmax-rs:latest
-            milo1023/majsoulmax-rs:${{ github.ref_name }}  # 为版本标签创建特定的镜像标签
+            milo1023/majsoulmax-rs:${{ env.IMAGE_TAG }}
